--- a/style.css
+++ b/style.css
@@ -867,3 +867,10 @@ a:hover:after {
     color: black;
     font-size: 20px;
   }
+	
+#book
+{
+  border-color: black;
+  border-style: solid;
+  border-width: 0.8px;
+}
