--- a/style.css
+++ b/style.css
@@ -875,7 +875,7 @@ a:hover:after {
     font-size: 20px;
   }
 
-#l_photo {
+#l-photo {
 width: 20%;
 height: auto;
 display: block;
@@ -883,43 +883,43 @@ margin: 40px auto 0 auto;
 }
 
 @media screen and (max-width: 1250px) {
-#l_photo {
-width: 30%;
-}
+	#l-photo {
+	width: 30%;
+	}
 }
 
 
 @media screen and (min-width: 791px) and (max-width: 1000px) {
-#l_photo {
-width: 35%;
-height: auto;
-display: block;
-margin: 35px auto 10px auto;
-}
+	#l-photo {
+	width: 35%;
+	height: auto;
+	display: block;
+	margin: 35px auto 10px auto;
+	}
 }
 @media screen and (max-width: 790px) {
-#l_photo {
-width: 40%;
-height: auto;
-display: block;
-margin: 35px auto 10px auto;
-}
+	#l-photo {
+	width: 40%;
+	height: auto;
+	display: block;
+	margin: 35px auto 10px auto;
+	}
 }
 
 @media screen and (max-width: 550px) {
-#l_photo {
-width: 55%;
-height: auto;
-display: block;
-margin: 35px auto 10px auto;
-}
+	#l-photo {
+	width: 55%;
+	height: auto;
+	display: block;
+	margin: 35px auto 10px auto;
+	}
 }
 
 @media screen and (max-width: 450px) {
-#l_photo {
-width: 60%;
-height: auto;
-display: block;
-margin: 35px auto 10px auto;
-}
+	#l-photo {
+	width: 60%;
+	height: auto;
+	display: block;
+	margin: 35px auto 10px auto;
+	}
 }
