--- a/style.css
+++ b/style.css
@@ -875,7 +875,7 @@ a:hover:after {
     font-size: 20px;
   }
 
-#l-photo {
+img#l-photo {
 width: 20%;
 height: auto;
 display: block;
@@ -883,14 +883,14 @@ margin: 40px auto 0 auto;
 }
 
 @media screen and (max-width: 1250px) {
-	#l-photo {
+	img#l-photo {
 	width: 30%;
 	}
 }
 
 
 @media screen and (min-width: 791px) and (max-width: 1000px) {
-	#l-photo {
+	img#l-photo {
 	width: 35%;
 	height: auto;
 	display: block;
@@ -898,7 +898,7 @@ margin: 40px auto 0 auto;
 	}
 }
 @media screen and (max-width: 790px) {
-	#l-photo {
+	img#l-photo {
 	width: 40%;
 	height: auto;
 	display: block;
@@ -907,7 +907,7 @@ margin: 40px auto 0 auto;
 }
 
 @media screen and (max-width: 550px) {
-	#l-photo {
+	img#l-photo {
 	width: 55%;
 	height: auto;
 	display: block;
@@ -916,7 +916,7 @@ margin: 40px auto 0 auto;
 }
 
 @media screen and (max-width: 450px) {
-	#l-photo {
+	img#l-photo {
 	width: 60%;
 	height: auto;
 	display: block;
